Add upload metadata to tracker Add list file metadata on tracker

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Client
-tracker.host=192.168.0.1:8080
+server.port=8081
+
+tracker.host=localhost
+tracker.port=8080
 
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
