--- a/Tracker/src/main/resources/application.properties
+++ b/Tracker/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=Tracker
 server.port=8080
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:file:./data/TrackerDB/database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
