Add split in chunks Add partial implementation of peer to peer download

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -7,3 +7,7 @@ tracker.port=8080
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+file.chunk.size=1024
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
