Add refactored UploadFileMetadataService

--- a/Client/src/main/resources/application.properties
+++ b/Client/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-file.chunk.size=1024
+file.chunk.size=1048576
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
