--- a/Tracker/src/main/resources/application.properties
+++ b/Tracker/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.h2.console.enabled=true
 file.chunk.size=1024
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
+
+metadata.file.directory=data/file-metadata
+metadata.file.extension=file-metadata
