--- a/Tracker/src/main/resources/application.properties
+++ b/Tracker/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-file.chunk.size=1024
+file.chunk.size=1048576
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 
